# datagen-python-sdk

./: AGENTS.md  CHANGELOG.md  DATAGEN_TUTORIAL.md  LICENSE  README.md  WHY_DATAGEN.md  pyproject.toml
.claude/commands/: create_linear_ticket.md
.github/workflows/: publish.yml  test.yml
datagen_python_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datagen_sdk/: client.py
examples/: list_issues.py
projects/datagendev/datagen-python-sdk/: pyproject.toml
projects/datagendev/datagen-python-sdk/datagen_sdk/: __init__.py
projects/datagendev/datagen-python-sdk/examples/: list_projects.py
projects/datagendev/signup-enrichment/: .env  linkedin_profiles_full.json  linkedin_profiles_latest_batch.json  linkedin_profiles_raw.json  streamlit_app.py
projects/datagendev/signup-enrichment/.claude/agents/: email-drafter.md
projects/datagendev/signup-enrichment/.claude/commands/: analyze_icp.md
projects/datagendev/signup-enrichment/migrations/: 001_add_email_tracking.sql
projects/datagendev/signup-enrichment/outreach_emails/: shiladitya_banerjee.md
tests/: __init__.py  test_client.py
