[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datagen-python-sdk"
version = "0.1.0"
description = "Minimal Python client for Datagen tools API"
authors = [{ name = "Datagen" }]
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[project.urls]
Homepage = "https://datagen.dev"
